[package]
name = "json-to-xlsx"
version = "0.1.0"
authors = [
    "Lukas Matta <hello@lukasmatta.com>",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/lukasmatta/json-to-xlsx.git"
keywords = ["xlsx", "json", "excel", "convert", "json to xlsx", "json to excel"]
description = """
Simple library to convert JSON files to Excel (xlsx).
"""
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zip = "0.6"

